1998-03-29  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_raster_clear): New function.

	* internal.h: Declare tkobjc_raster_clear.

	* ZoomRaster.m ([ZoomRaster -_setConfigureInfo_:]): New method.
	([ZoomRaster -createEnd]): Call _setConfigureInfo_ for Configure
	and Expose instead of just a (inline) Configure.
	([ZoomRaster -handleConfigureWidth:Height:]): Let newWidth exceed
	newHeight (Win32 seems to like to think better of small window
	widths).
	([ZoomRaster -handleExposeWidth:Height:]): New method.  Calls
	tkobjc_raster_clear for new extent.

	* ZoomRaster.h: Declare handleExposeWidth:Height:.

	* Raster.m ([Raster +createBegin:]): Define default 
	width and height in a createBegin, not createEnd.

	* Raster.h: Declare createBegin and createEnd.

1998-03-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* TkExtra.m (ensureBltSupportFiles): Don't call getSwarmHome
	twice; use the local variable.  Duplicate basePath so that it
	may be printed later in a diagnostic message.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m: Don't include stdlib.h.
	(setSecondaryPath): Now takes `arguments' argument to get swarmHome
	instead of using SWARMHOME environment variable.

	* TkExtra.m: Include objectbase.h and objectbase/Arguments.h.
	(ensureBltSupportFiles): Enhance to check for usable blt_library
	in swarmHome/lib.  Now takes `arguments' argument.

1998-03-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* tkobjc.h: Don't include XDrawer.h if Win32.

	* ZoomRaster.m ([ZoomRaster -draw:X:Y:]): Don't define if
	Win32.

	* Raster.m ([Raster -draw:X:Y:]): Don't define if Win32.

	* Raster.h: Don't include XDrawer.h if Win32.  Don't declare
	- draw: (id <XDrawer):X:Y: in Win32.

	* Makefile (XDRAWER_H): Define as XDrawer.h if not Win32. 
	Put XDRAWER_H in BACKEND_H.  Replace XDrawer.h with XDRAWER_H 
	throughout.

1998-03-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m: Include stdlib.h (for getenv).